# Feast_docker_compose

./: .env  Makefile  README.md  docker-compose.yml
feast/: Dockerfile  pyproject.toml
feast/feature_repo/: entities.py  feature_services.py  feature_store.yaml  feature_views.py  file_sources.py
feast/feature_repo/data/: online.db  registry.db
notebooks/: Dockerfile  Feast Tutorial.ipynb  Save dataset to Mysql.ipynb  pyproject.toml
notebooks/.ipynb_checkpoints/: Feast Tutorial-checkpoint.ipynb  Save dataset to Mysql-checkpoint.ipynb
