[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Fernando Freire <fernando.freire@elo7.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
numpy = ">=1.22.3"
pandas = ">=1.4.2"
jupyter = ">=1.0.0"
ipywidgets = ">=7.6.5"
matplotlib = ">=3.5.1"
feast = {extras = ["redis", "aws"], version = "^0.24.1"}
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
